Domain event system, notification overhaul, feeds, event templates, and infra cleanup
## Domain Event System
- DomainEvent, DomainEventHandler, DomainEventBus infrastructure with Guice multibinding
- 17 event handlers registered for all notification-producing operations
- All routes fully decoupled from NotificationService (Events, News, Exchange, Forms, Procurement, MemberGroups, Lending)
- Services now publish domain events; handlers create notifications
- DemoService migrated to use services for event-producing operations

## User Feeds (iCal, RSS, Atom)
- Feed token system: user_feed_token table, FeedTokenService, FeedTokenRoutes
- User-bound iCal feed at /public/feed/{token}/events.ics
  - Filters out declined events and events with expired registration deadlines
  - 1-hour cache
- RSS 2.0 and Atom 1.0 notification feeds using ROME library
  - Per-type feed_enabled preference (new column on user_notification_settings)
  - NotificationToggle extended with 'feed' field
- Frontend: FeedSection component with token management + copyable feed URLs
- Frontend: Feed toggle column in notification settings
- Help center: RSS/Atom guide and iCal guide covering Thunderbird, Outlook, Android, iOS, web readers

## Event Templates
- event_template, event_template_field, event_template_restriction tables
- Full CRUD backend (EventTemplateRepository, EventTemplateService, EventTemplateRoutes)
- Frontend: TemplateManageView with create/edit/delete + field editor
- Frontend: "Load Template" dropdown in EventEditView that populates form from template
- Quick field templates now include isPublic flag (Ort/Treffpunkt: public, Thema: internal)
- Demo data: Standard-Übung and Wettbewerb templates

## Help Center
- Dedicated help pages for theming, sessions, notifications, modules, import
- No duplicate help components (linter check added)
- Sidebar linkage check added to linter
- RSS/Atom and iCal setup guides with platform-specific instructions